--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .whole{
-  background-color:orange;
+  background-color:#f8ca33;
   width: 700px;
   height: 1000px;
 }
@@ -7,11 +7,12 @@
   padding: 20px;
   height: 110px;
   width: 620px;
-  background-color:rgb(253, 57, 57);
+  background-color:rgb(43, 40, 40);
+  color: white;
   position: relative;
   left: 20px;
   top: 20px;
-  border-radius: 20px;
+  /* border-radius: 20px; */
 }
 .image {
   position: relative;
@@ -21,23 +22,35 @@
   top: 20px;
 }
 .img1{
-  border-radius: 20px;
+  /* border-radius: 20px; */
 }
 .imgcaption{
-  border-radius: 20px;
+  /* border-radius: 20px; */
   position: relative;
-  background-color: rgb(245, 41, 41);
+  background-color:rgb(43, 40, 40);
+  color: white;
   width: 256px;
 }
 .form1{
   position: relative;
   top: 0px;
   left: 20px;
-  border-radius: 20px;
+  /* border-radius: 20px; */
   padding: 20px;
   width: 620px;
-  background-color:rgb(253, 57, 57);
-  color:black;
+  background-color:rgb(43, 40, 40);
+  color: white;
   font-style: normal;
   font-family: inherit;
+}
+a{
+  color: rgb(92, 223, 212);
+}
+a:hover{
+  color: #e9cd73fa;
+}
+.file{
+  background-color: green;
+  width: 70px;
+
 }
