--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .whole{
   background-color:#f8ca33;
   width: 700px;
-  height: 1000px;
+  height: 1020px;
 }
 .heading{
   padding: 20px;
@@ -43,4 +43,33 @@ a{
 }
 a:hover{
   color: #e9cd73fa;
+}
+.circle{
+  background-color: black;
+  height: 50px;
+  width: 50px;
+  position: relative;
+  border-radius: 50px;
+  top: -20px;
+  left: 18px;
+  animation: animateMe;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+@keyframes animateMe{
+  0%{
+    top: -20px;
+    left: 20px;
+    background-color: black;
+  }
+  /* 50%{
+    top: -20px;
+    left: 315px;
+    background-color: crimson;
+  } */
+  50%{
+    top: -20px;
+    left: 630px;
+    background-color: papayawhip;
+  }
 }
