--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
   padding: 20px;
   width: 620px;
   background-color:rgb(43, 40, 40);
-  color: white;
+  color: rgb(194, 190, 190);
   font-style: normal;
   font-family: inherit;
 }
